--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   <!-- Servlets -->
   <servlet>
     <servlet-name>dataEntryServlet</servlet-name>
-    <servlet-class>ca.drusk.flightmanager.server.DataEntryServiceImpl</servlet-class>
+    <servlet-class>ca.drusk.flightmanager.server.service_implementations.DataEntryServiceImpl</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>dataEntryServlet</servlet-name>
@@ -17,7 +17,7 @@
 
   <servlet>
     <servlet-name>dataDeletionServlet</servlet-name>
-    <servlet-class>ca.drusk.flightmanager.server.DataDeletionServiceImpl</servlet-class>
+    <servlet-class>ca.drusk.flightmanager.server.service_implementations.DataDeletionServiceImpl</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>dataDeletionServlet</servlet-name>
@@ -26,7 +26,7 @@
 
   <servlet>
     <servlet-name>dataQueryServlet</servlet-name>
-    <servlet-class>ca.drusk.flightmanager.server.DataQueryServiceImpl</servlet-class>
+    <servlet-class>ca.drusk.flightmanager.server.service_implementations.DataQueryServiceImpl</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>dataQueryServlet</servlet-name>
